add myriad pro fonts

--- a/wp-content/themes/ascendant/style.css
+++ b/wp-content/themes/ascendant/style.css
@@ -1,7 +1,7 @@
 /*
  Theme Name: Ascendant
  Theme URI: https://cpothemes.com/theme/ascendant
- Description: Ascendant is a free multipurpose WordPress theme perfect for agencies and professionals. This theme comes with support for a full homepage slider, feature blocks, portfolios, services, team members, and even testimonials, all thanks to its companion plugin CPO Content Types. Ascendant is one of the best business WordPress themes thanks to its neutral design and extreme flexibility. Moreover, this theme also integrates with popular plugins such as WooCommerce, Yoast SEO, WPML, and Contact Form 7. 
+ Description: Ascendant is a free multipurpose WordPress theme perfect for agencies and professionals. This theme comes with support for a full homepage slider, feature blocks, portfolios, services, team members, and even testimonials, all thanks to its companion plugin CPO Content Types. Ascendant is one of the best business WordPress themes thanks to its neutral design and extreme flexibility. Moreover, this theme also integrates with popular plugins such as WooCommerce, Yoast SEO, WPML, and Contact Form 7.
  Tags: one-column, two-columns, right-sidebar, full-width-template, sticky-post, theme-options, custom-background, custom-menu, featured-images, threaded-comments, translation-ready
  Author:CPOThemes
  Author URI: https://cpothemes.com/
@@ -12,6 +12,15 @@
  Text Domain: ascendant
 */
 
+@font-face {
+    font-family: MyriadPro;
+    src: url(fonts/MyriadPro-BlackSemiCn.otf);
+}
+
+@font-face {
+    font-family: MyriadProBold;
+    src: url(fonts/MyriadPro-Bold.otf);
+}
 
 h1,h2,h3,h4,h5,h6, .heading {
 	font-family: "Raleway";
@@ -54,10 +63,10 @@ a,
 .menu-main > li:after{position:absolute; bottom:-1px; width:50%; left:25%; background-color:#70b85d; height:1px; display:block;z-index:999999;}
 .menu-main > li:hover:after { content: ""; }
 
-.menu-main .current-menu-ancestor > a, 
-.menu-main .current-menu-ancestor.has-children:before, 
+.menu-main .current-menu-ancestor > a,
+.menu-main .current-menu-ancestor.has-children:before,
 .menu-main .current-menu-item > a { color: #70b85d; }
-.menu-main .current_page_ancestor > a:hover, 
+.menu-main .current_page_ancestor > a:hover,
 .menu-main .current-menu-item > a:hover { color: #70b85d; }
 
 .menu-main .has-children:before { color:#18253c; content:'\f107'; font-size:0.813em; margin-top:-6px; font-family: "fontawesome"; border: 0 none; }
@@ -265,9 +274,9 @@ body #tagline {
 .blog:not(.allegiant_pro_template) .post-comments {
 	display: none;
 }
-html body .button, 
-html body .button:link, 
-html body .button:visited, 
+html body .button,
+html body .button:link,
+html body .button:visited,
 input[type=submit] {
 	border: 0 none;
 	background: #70b85d;
@@ -362,4 +371,3 @@ body #subfooter {
 .allegiant_pro_template .menu-main li ul .has-children:before {
 	margin-top: -12px;
 }
-
