--- a/wp-content/themes/ascendant/style.css
+++ b/wp-content/themes/ascendant/style.css
@@ -35,7 +35,7 @@ h1,h2,h3,h4,h5,h6, .heading {
 }
 
 body {
-	font-family: 'Lato', Arial, Helvetica, sans-serif;
+	font-family: 'MyriadPro','Lato', Arial, Helvetica, sans-serif;
 	color: #8c9597;
 	font-size: 15px;
 	line-height: 27px;
