change myriad bold by regular

--- a/wp-content/themes/ascendant/style.css
+++ b/wp-content/themes/ascendant/style.css
@@ -14,7 +14,7 @@
 
 @font-face {
     font-family: MyriadPro;
-    src: url(fonts/MyriadPro-BlackSemiCn.otf);
+    src: url(fonts/MyriadPro-Regular.otf);
 }
 
 @font-face {
