--- a/wp-content/themes/ascendant/style.css
+++ b/wp-content/themes/ascendant/style.css
@@ -91,6 +91,7 @@ a,
 	color: #70b85d;
 	margin-bottom: 40px;
 	padding-bottom: 0;
+	display: none;
 }
 .slider-slides .slide-content {
 	font-size: 33px;
@@ -301,10 +302,10 @@ input[type=submit] {
 /* Footer */
 #subfooter,
 #footer {
-	background-color: #18253c;
+	background-color: white;
+	color: gray;
 }
 #footer {
-	border-top: 1px solid #a9afb1;
 	padding: 10px 0;
 }
 .footer:before {
@@ -375,4 +376,9 @@ body #subfooter {
 .tagline {
   padding: 0;
   background-color: white;
+}
+
+#team .row .column-narrow {
+	margin-right: 5%;
+	margin-left: 17%;
 }
