--- a/wp-content/themes/ascendant/style.css
+++ b/wp-content/themes/ascendant/style.css
@@ -400,7 +400,8 @@ body #subfooter {
 
 #pagetitle h1 {
   position: absolute;
-  bottom: 50%
+  bottom: 50%;
+  left: 50%;
   color: white;
   text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
   font-size: 25px;
